Formatting tweak README.Rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -34,13 +34,13 @@ devtools::install_github("ryancrass/pmxhelpr")
 
 Functions in this package use the following naming conventions:
 
-* Wrapper functions: *return object*_*wrapped function*_*purpose*
+* Wrapper functions: *ReturnObject*_*WrappedFunction*_*Purpose*
   + `model_mread_load()` wraps `mrgsolve::mread_cache()` to read internal package model files returning an `mrgmod` object.
   + `df_mrgsim_addpred()` wraps `mrgsolve::mrgsim()` including `mrgsolve::zero_re()` to add population predictions (PRED) to the input data returning a `data.frame`.
   + `df_mrgsim_replicate()` wraps `mrgsolve::mrgsim()` to replicate the input data returning a `data.frame`.
   + `plot_vpc_exactbins()` wraps `vpc::vpc()` to generate a VPC plot using exact time bins returning a `ggplot` object.
   
-* Helper functions: *return object*_*purpose*
+* Helper functions: *ReturnObject*_*Purpose*
   + `df_nobsbin` returns a summary `data.frame` with counts of the number of missing and non-missing observations per bin returning a `data.frame`.
   + `df_pcdv` returns a `data.frame` containing a new variable of prediction-corrected values of the dependent variable.
 
