Add utils.R with class check helper functions and write testthat tests for df_addpred

--- a/vignettes/vpc-exact-bins.Rmd
+++ b/vignettes/vpc-exact-bins.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "vpc-exact-bins"
+title: "VPC Plots with Exact Bins"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{vpc-exact-bins}
