Update README text

--- a/README.Rmd
+++ b/README.Rmd
@@ -41,8 +41,8 @@ Functions in this package use the following naming conventions:
   + `plot_vpc_exactbins()` wraps `vpc::vpc()` to generate a VPC plot using exact time bins returning a `ggplot` object.
   
 * Helper functions: *ReturnObject*_*Purpose*
-  + `df_nobsbin` returns a summary `data.frame` with counts of the number of missing and non-missing observations per bin returning a `data.frame`.
-  + `df_pcdv` returns a `data.frame` containing a new variable of prediction-corrected values of the dependent variable.
+  + `df_nobsbin` returns a summary `data.frame` with counts of the number of missing and non-missing observations per bin.
+  + `df_pcdv` returns a `data.frame` containing the prediction-corrected dependent variable.
 
 ## Example Visual Predictive Check Workflow
 
