--- a/vignettes/vpc-exact-bins.Rmd
+++ b/vignettes/vpc-exact-bins.Rmd
@@ -157,7 +157,9 @@ vpc_jenks <- vpc(
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
   show = list(obs_dv = TRUE),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 vpc_jenks
 ```
@@ -190,7 +192,9 @@ vpc_pretty <- vpc(
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
   show = list(obs_dv = TRUE),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 vpc_pretty
 ```
@@ -219,7 +223,9 @@ vpc_kmeans <- vpc(
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
   show = list(obs_dv = TRUE),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 vpc_kmeans
 ```
@@ -246,7 +252,9 @@ vpc_density <- vpc(
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
   show = list(obs_dv = TRUE),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 vpc_density
 ```
@@ -274,7 +282,9 @@ vpc_data <- vpc(
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
   show = list(obs_dv = TRUE),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 
 vpc_time <- vpc(
@@ -287,7 +297,9 @@ vpc_time <- vpc(
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
   show = list(obs_dv = TRUE),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 
 vpc_data
@@ -324,7 +336,9 @@ vpc_exact_ntime <- vpc(
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
   show = list(obs_dv = TRUE),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 vpc_exact_ntime
 ```
@@ -339,7 +353,9 @@ vpc_exact <- plot_vpc_exactbins(
   output_vars = c(PRED = "PRED", IPRED = "IPRED", SIMDV = "SIMDV", OBSDV = "OBSDV"),
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 
 vpc_exact
@@ -369,7 +385,9 @@ vpc_exact_bin_gt10 <- plot_vpc_exactbins(
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
   min_bin_count = 10,
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 
 vpc_exact_bin_gt10
@@ -388,7 +406,9 @@ vpc_exact_food <- plot_vpc_exactbins(
   output_vars = c(PRED = "PRED", IPRED = "IPRED", SIMDV = "SIMDV", OBSDV = "OBSDV"),
   pi = c(0.05, 0.95),
   ci = c(0.05, 0.95),
-  log_y = TRUE
+  log_y = TRUE,
+  xlab = "Time (hours)",
+  ylab = "PRED-corrected Concentration (ng/mL)"
 )
 
 vpc_exact_food
