--- a/README.Rmd
+++ b/README.Rmd
@@ -27,7 +27,7 @@ You can install the development version of pmxhelpr from [GitHub](https://github
 
 ``` r
 # install.packages("devtools")
-devtools::install_github("ryancrass/pmxhelpr")
+devtools::install_github("ryancrass/pmxhelpr@0.0.3")
 ```
 
 ## Function Naming Conventions
